package iLoader;

public interface ExtendedFormatViewer {

    void viewPNG(String fileName);

}
