package iLoader;

public interface FormatViewer {

    void view(String fileFormat, String fileName);

}
